<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/station_title_label"
        style="?android:listSeparatorTextViewStyle"
        />
    <TextView android:id="@+id/station_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/station_details_label"
        style="?android:listSeparatorTextViewStyle"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/number_docks_available" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Number available"
                android:id="@+id/number_docks_available" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_bikes_available" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Number available"
                android:id="@+id/number_bikes_available" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/number_total_docks" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Number total"
                android:id="@+id/number_total_docks" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>